--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       height: 35px;
       border-radius: 25px;
       background-color: #FF80B3;
-      bottom: 0px;
+      buttom: 50px;
       font-size: 12px;
       color: #ffffff;
       text-decoration: none;
@@ -112,10 +112,14 @@
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.3s;
+            buttom: 50px;
+
     }
 
     .button i {
       margin-right: 10px;
+      
+
     }
   </style>
 </head>
