--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     #button-container {
       position: absolute;
-      bottom: 100px;
+      bottom: 110px;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
@@ -87,14 +87,13 @@
       height: 35px;
       border-radius: 25px;
       background-color: #FF80B3;
-      buttom: 50px;
       font-size: 12px;
       color: #ffffff;
       text-decoration: none;
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.3s;
-      bottom: 20px;
+      margin-bottom: 50px;
     }
 
     #boton-asistencia {
@@ -112,7 +111,6 @@
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.3s;
-            buttom: 50px;
 
     }
 
