--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
   <div id="button-container">
 
-  <a id="boton-direccion" href="https://maps.app.goo.gl/gBTRvqYq4zNKzkeg6" class="button">
+  <a id="boton-direccion" href="https://maps.app.goo.gl/ds4bvG5Hqt2sQAcr8" class="button">
       <i class="fas fa-map-marker-alt"></i> <b>VER UBICACIÓN<b>
     </a>
     
